# Speech-to-Text-Engine

./: Pipfile  accentclassification.ipynb  setup.cfg
