[metadata]
name = sp2txt
version = 0.0.1

[files]
packages =
  sp2txt

[options]
include_package_data = True
install_requires =
  numpy
  pandas
  tqdm
  torch

[toptions.entry_points]
console_scripts =
  extract-data = sp2txt.scripts.data_extraction:main
  preprocess-mfcc = sp2txt.scripts.mfcc:main
  preprocess-stft = sp2txt.scripts.stft:main
  train-model = sp2txt.scripts.train:main
  make-predictions = sp2txt.scripts.predict:main

[flake8]
max-line-length = 120
# exclude = **/tests/*
